--- a/2_Plagiarism_Feature_Engineering.ipynb
+++ b/2_Plagiarism_Feature_Engineering.ipynb
@@ -1610,9 +1610,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** The containment considera apenas a resposta que está sendo utilizado para o calculo, sem olhar para as demais respostas. Por isso, não há vazamento de informação entre os dados de treino e teste.\n",
+    "**Answer:** \n",
     "\n",
-    "Ou seja, uma vez que temos a fonte com a qual comparamos cada resposta é possível calcular o containment. O mesmo não seria possível se quisessemos verificar se uma resposta é plágio de outra.\n"
+    "The containment only considers the answer that is being used for the calculation, without looking at the other answers. Therefore, there is no leakage of information between the training and test data.\n",
+    "\n",
+    "That is, once we have a source with which to compare each answer, it is possible to calculate the containment. The same would not be possible if we wanted to check whether one answer is plagiarism from another.\n"
    ]
   },
   {
@@ -2758,7 +2760,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n"
+    "**Answer:**\n",
+    "\n",
+    "There is a high correlation between the features as observed on the correlation matrix. However, the correlation between c_1 and the others n-grams features decreases as the the 'n' increases and in the other hand the correlation between c_3 and larger n-gram doesnt decreases. Therefore I selected c_1 and c_3 due this correlation pattern and lcs_word feature because it is a different feature calculation.\n",
+    "\n",
+    "\n"
    ]
   },
   {
