--- a/3_Training_a_Model.ipynb
+++ b/3_Training_a_Model.ipynb
@@ -901,7 +901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer**: \n"
+    "** Answer**: There is not any false positive or false negative on the predicted values for the test set. It is probably because the features used are very representative and allows a good discrimination. The c_1 and c_3 features reffers to the word frequency and lcs is about word sequence, this two feature types give a good understand of plagiarism we aim to detect. \n"
    ]
   },
   {
@@ -915,7 +915,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer**:\n",
+    "** Answer**: Initially I was looking to a benchmark so I choose the simplest model for classification problem that is the Logistic Regression. Given that with this simple linear model we achieved a 100% accuracy there is no reason to use more complex algorithms. \n",
     "\n"
    ]
   },
